@@ -1,3 +1,8 @@
+Sun Sep  4 00:11:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* variable.c (rb_const_set): show the previous definition
+	  location.  [EXPERIMENTAL]
+
 Sat Sep  3 23:56:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (sizeof_struct_dirent_too_small): check if struct
